search script and search server

--- a/search/search/templates/index.html
+++ b/search/search/templates/index.html
@@ -9,7 +9,7 @@
     <div class="feed">
         <div class="search_bar">
             <form action="/" method="GET">
-                <div><input type="text" name="q" value="query" /></div>
+                <div><input type="text" name="q" value="{{query}}" /></div>
                 <div><input type="range" name="w" min="0" max="1" step=".01" /></div>
                 <input type="submit" value="Search" />
             </form>
